# Face-Occlusion-Prediction

./: .env.example  .gitignore  note.md  pyproject.toml
scripts/: cluster_exec.sh  cluster_sync_pull.sh  cluster_sync_push.sh
scripts/slurm/: _common.sh  eval.sh  train.sh
src/data_challenge/: __init__.py  analyze.py  eval.py  patch_wandb.py  train.py
src/data_challenge/configs/: convnext_tiny.yaml  dinov2_small.yaml  dinov3_l_lora.yaml  swin_t.yaml  twins_svt_small.yaml  vit_b_16.yaml
src/data_challenge/configs/archive/phase1_baselines/: convnext_tiny.yaml  dinov2_base.yaml  efficientnet_b3.yaml  resnet50.yaml
src/data_challenge/configs/phase2_balanced_batching/: convnext_tiny.yaml  resnet50.yaml  swin_t.yaml  vit_b_16.yaml
src/data_challenge/data/: dataset.py  samplers.py
src/data_challenge/models/: __init__.py  cnn_baseline.py  dinov3.py
src/data_challenge/notebooks/: eda.ipynb  kaggle_train.ipynb
src/data_challenge/utils/: logger.py  losses.py  metrics.py
