[project]
name = "data-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lhnguyen", email = "lehoangnguyen510@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.9",
]

[project.scripts]
data-challenge = "data_challenge:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
